# Daily-News-Scraper

backend/: .env  .gitignore  main.py  pyproject.toml
backend/app/: auth.py  controller.py  database.py  engine.py  main.py  models.py  news.py  schemas.py
frontend/: package-lock.json  package.json
